Update Electric Rate Title

--- a/app/views/communities/electric_rates_sales/rates/_historical_rate_chart.html.haml
+++ b/app/views/communities/electric_rates_sales/rates/_historical_rate_chart.html.haml
@@ -1,4 +1,4 @@
-- chart_title = "#{@community.name.titleize} - Electric Rates"
+- chart_title = "#{@community.name.titleize} - Average Electric Rates"
 = line_chart electric_rates_community_charts_path(@community), 
     height: '400px',
     title: chart_title,
