--- a/app/views/communities/general/_geography.html.haml
+++ b/app/views/communities/general/_geography.html.haml
@@ -35,7 +35,7 @@
             - if @community.grid.present?
               %tr
                 %th.pe-3.text-muted.fw-semibold Electric Grid
-                %td= link_to @community.grid.name.titleize, grid_path(@community.grid), class: "text-info fw-bold", data: { turbo: false }
+                %td= link_to @community.grid.name.titleize, grid_path(@community.grid), class: "text-info fw-bold", data: { turbo_frame: "_top" }
   
             %tr
               %th.pe-3.text-muted.fw-semibold Latitude, Longitude
