--- a/app/views/shared/modal/_community_service_area.html.haml
+++ b/app/views/shared/modal/_community_service_area.html.haml
@@ -3,7 +3,7 @@
   %h6.fw-bold.mb-1 Service Area
   %p.text-muted.mb-1
     This section displays data from power plants within this community’s
-    = @community.show_full_service_area? ? 'local service area.' : ' service area.'
+    = @community.show_utility_service_area? ? 'local service area.' : ' utility service area.'
     
   - if @community.grid
     = link_to grid_path(@community.grid, anchor: 'capacity'),
