--- a/app/views/communities/fuel.html.haml
+++ b/app/views/communities/fuel.html.haml
@@ -13,7 +13,8 @@
           icon: 'fuel-pump',
           title: 'Fuel Prices',
           description: 'Current and historical price trends for heating fuel and gasoline',
-          anchor: "#fuel-prices"
+          anchor: "#fuel-prices",
+          related_datasets: ["public_fuel_prices"]
         
         = render "communities/#{tab}/fuel_prices"
     
