--- a/app/views/communities/electric_rates_sales.html.haml
+++ b/app/views/communities/electric_rates_sales.html.haml
@@ -15,7 +15,8 @@
           icon: 'coin',
           title: 'Rates',
           description: 'Residential, commercial, and industrial electric rate trends',
-          anchor: '#rates'
+          anchor: '#rates',
+          related_datasets: ["public_populations_rates"]
 
         = render "communities/#{tab}/rates"
 
