--- a/app/views/communities/electric_rates_sales.html.haml
+++ b/app/views/communities/electric_rates_sales.html.haml
@@ -16,7 +16,7 @@
           title: 'Rates',
           description: 'Residential, commercial, and industrial electric rate trends',
           anchor: '#rates',
-          related_datasets: ["public_populations_rates"]
+          related_datasets: ["public_rates"]
 
         = render "communities/#{tab}/rates"
 
