--- a/app/views/communities/power_generation/generation/_about_modal.html.haml
+++ b/app/views/communities/power_generation/generation/_about_modal.html.haml
@@ -1,28 +1,9 @@
--# 1. The Trigger Button
-%button.btn.btn-sm.btn-aedg-secondary.ms-2{ type: "button", data: { bs_toggle: "modal", bs_target: "#generationInfoModal" } }
-  %i.bi.bi-info-circle.me-1
-  About this Data
-
--# 2. The Modal
-#generationInfoModal.modal.fade{ tabindex: "-1", aria: { labelledby: "generationInfoModalLabel" } }
-  .modal-dialog.modal-dialog-centered
-    .modal-content
-      .modal-header
-        %h5#generationInfoModalLabel.modal-title About Generation Data
-        %button.btn-close{ type: "button", data: { bs_dismiss: "modal" }, aria: { label: "Close" } }
-      .modal-body
-        .d-flex.mb-4
-          = render 'shared/modal/generation_sources', entity: @community
-          
-        .d-flex.mb-4
-          = render 'shared/modal/net_vs_gross_generation'
-          
-        .d-flex.mb-4
-          = render 'shared/modal/community_service_area'
-      
-        .d-flex
-          = render 'shared/modal/ipp_generation'
-          
-      .modal-footer
-        %button.btn.btn-secondary{ type: "button", data: { bs_dismiss: "modal" } } Close
-          
+= render 'shared/about_this_data_modal', id: 'generationInfoModal', title: 'About Generation Data' do
+  .d-flex.mb-4
+    = render 'shared/modal/generation_sources', entity: @community
+  .d-flex.mb-4
+    = render 'shared/modal/net_vs_gross_generation'
+  .d-flex.mb-4
+    = render 'shared/modal/community_service_area'
+  .d-flex
+    = render 'shared/modal/ipp_generation'
